Fix: notice.js, notice.css > $OP.Notice() | Wrapped the message tag by the headline tag.

--- a/notice.css
+++ b/notice.css
@@ -25,27 +25,33 @@ div.OP_NOTICE > div {
 	margin-left: 0.5em;
 }
 
-div.OP_NOTICE > div > div.message {
+div.OP_NOTICE div.headline {
 	margin:  0;
 	padding: 0;
 	padding-left: 0.5em;
 	border-left:  0.5em solid black;
 }
 
-div.OP_NOTICE > div > div.message > p {
+div.OP_NOTICE div.message {
+	margin-top:    0.75em;
+	margin-bottom: 0.50em;
+}
+
+div.OP_NOTICE div.headline > p,
+div.OP_NOTICE div.message  > p {
 	margin: 0;
 	padding:0;
+}
+
+div.OP_NOTICE div.headline > p {
 	text-indent: 0;
-}
-
-div.OP_NOTICE > div > div.message > p:nth-child(1) {
-	font-size: 10pt;
 	font-weight: bold;
+	font-size: 125%;
 }
 
-div.OP_NOTICE > div > div.message > p:nth-child(2) {
-	_font-size: 11pt;
+div.OP_NOTICE div.message > p {
 	font-style: italic;
+	font-weight: bold;
 }
 
 div.OP_NOTICE td.file {
